tests/syntax-error/undeclared-var.silly
// RUN: cd %S
// RUN: %Not %ExeSilly -g undeclared-var.silly -o %t.exe 2>&1 | %FileCheck %s
// CHECK: undeclared-var.silly:8:1: error: Attempt to assign to undeclared variable: x
// CHECK:     8 | x = 3;
// CHECK:       | ^


x = 3;
